--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,5 +75,129 @@
   }
 
 
+  @media only screen and (max-width:600px){
 
-  /* media queries */
+    .flights-container{
+        display:grid;
+        height: 50%;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top:2%;
+        order: 1;
+      }
+
+      #flight-table{
+        border-collapse:collapse;
+        width:100%;
+        height: 50%;
+        border-radius: 2px;
+        background-color: whitesmoke;
+      }
+
+    .map-container {
+        display: flex;
+        flex-grow: 1;
+        flex-shrink: 0;
+        margin-top: 3%;
+        padding-left: 10%;
+        background-position: center;
+        background-size: contain;
+        justify-items: flex-start;
+        flex-direction: column;
+        order:0;
+        margin-right:17%;
+        
+      }
+
+      #map {
+        height: 200px;
+        width: 100%;
+        border-radius: 2%;
+        padding-right: 10%;
+        margin-right:10%;
+        
+      }
+
+  }
+
+  @media only screen and (max-width:768px){
+    .flights-container{
+      display:grid;
+      height: 30%;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top:2%;
+    }
+
+    #flight-table{
+      border-collapse:collapse;
+      width:100%;
+      height: 100%;
+      border-radius: 2px;
+      background-color: whitesmoke;
+    }
+
+    .map-container {
+      display: flex;
+      flex-grow: 1;
+      flex-shrink: 0;
+      margin-top: 3%;
+      padding-left: 5%;
+      background-position: center;
+      background-size: contain;
+      justify-items: flex-start;
+      flex-direction: column;
+      padding-right:15%;
+      
+    }
+
+    #map {
+      height: 200px;
+      width: 100%;
+      border-radius: 2%;
+      padding-right: 10%;
+      margin-right:10%;
+      
+    }
+  }
+
+  @media only screen and (max-width:2070px){
+    .flights-container{
+      display:grid;
+      height: 50%;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top:2%;
+    }
+
+    #flight-table{
+      border-collapse:collapse;
+      width:100%;
+      height: 100%;
+      border-radius: 2px;
+      background-color: whitesmoke;
+    }
+
+    .map-container {
+      display: flex;
+      flex-grow: 1;
+      flex-shrink: 0;
+      margin-top: 3%;
+      padding-left: 5%;
+      background-position: center;
+      background-size: contain;
+      justify-items: flex-start;
+      flex-direction: center;
+      padding-right:15%;
+      
+    }
+
+    #map {
+      height: 200px;
+      width: 100%;
+      border-radius: 2%;
+      padding-right: 13%;
+      margin-right:15%;
+      
+    }
+  }
