--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,15 +4,17 @@
   }
 
   .header{
+    display: flex;
     width:auto;
     height:40px;
     background-color: #007FFF;
-    display: flex;
+    margin-top: 0.5%;
     justify-content: center;
     padding: 20px;
     margin-left: 1%;
-    margin-right: 1%;
-    border-radius: 10%;
+    margin-right: 3%;
+    border-radius: 0.5rem;
+    flex-shrink: 1;
   }
 
   body {
@@ -60,7 +62,8 @@
     flex-grow: 1;
     flex-shrink: 0;
     margin-top: 3%;
-    padding-left: 10%;
+    padding-left: 3%;
+    padding-right:3%;
     background-position: center;
     background-size: contain;
     justify-items: flex-end;
@@ -70,10 +73,9 @@
 
   #map {
     height: 150px;
-    width: 300px;
-    border-radius: 2%;
+    width: 100%;
+    border-radius: 0.5rem;
   }
-
 
   @media only screen and (max-width:600px){
 
@@ -162,20 +164,23 @@
   }
 
   @media only screen and (max-width:2070px){
+
     .flights-container{
       display:grid;
-      height: 50%;
+      height: 35%;
       padding-left: 5%;
       padding-right: 5%;
       padding-top:2%;
+      
     }
 
     #flight-table{
       border-collapse:collapse;
       width:100%;
       height: 100%;
-      border-radius: 2px;
+      border-radius: 0.5rem;
       background-color: whitesmoke;
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     }
 
     .map-container {
@@ -189,15 +194,17 @@
       justify-items: flex-start;
       flex-direction: center;
       padding-right:15%;
+      height:35%;
+      
       
     }
 
     #map {
-      height: 200px;
+      height: 300px;
       width: 100%;
       border-radius: 2%;
       padding-right: 13%;
       margin-right:15%;
-      
+      border-radius: 0.5rem;
     }
   }
