--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -2,21 +2,24 @@ $color_1: #007FFF;
 $font-family_1: "Montserrat", sans-serif;
 $background-color_1: #007FFF;
 $background-color_2: whitesmoke;
+$background-color_3: aliceblue;
 
 * {
 	padding: 0;
 	margin: 0;
 }
 .header {
+	display: flex;
 	width: auto;
 	height: 40px;
 	background-color: $background-color_1;
-	display: flex;
+	margin-top: 0.5%;
 	justify-content: center;
 	padding: 20px;
 	margin-left: 1%;
-	margin-right: 1%;
-	border-radius: 10%;
+	margin-right: 3%;
+	border-radius: 0.5rem;
+	flex-shrink: 1;
 }
 body {
 	margin: 0;
@@ -39,6 +42,7 @@ body {
 	width: 100%;
 	border-radius: 2px;
 	background-color: $background-color_2;
+	align-items: center;
 }
 #item-link {
 	color: $color_1;
@@ -57,7 +61,8 @@ body {
 	flex-grow: 1;
 	flex-shrink: 0;
 	margin-top: 3%;
-	padding-left: 10%;
+	padding-left: 3%;
+	padding-right: 3%;
 	background-position: center;
 	background-size: contain;
 	justify-items: flex-end;
@@ -65,10 +70,9 @@ body {
 }
 #map {
 	height: 150px;
-	width: 300px;
-	border-radius: 2%;
+	width: 100%;
+	border-radius: 0.5rem;
 }
-
 @media only screen and (max-width:600px) {
 	.flights-container {
 		display: grid;
@@ -78,15 +82,13 @@ body {
 		padding-top: 2%;
 		order: 1;
 	}
-
 	#flight-table {
 		border-collapse: collapse;
 		width: 100%;
 		height: 50%;
 		border-radius: 2px;
-		background-color: $background-color_2;
+		background-color: $background-color_3;
 	}
-
 	.map-container {
 		display: flex;
 		flex-grow: 1;
@@ -100,7 +102,6 @@ body {
 		order: 0;
 		margin-right: 17%;
 	}
-	
 	#map {
 		height: 200px;
 		width: 100%;
@@ -122,7 +123,8 @@ body {
 		width: 100%;
 		height: 100%;
 		border-radius: 2px;
-		background-color: $background-color_2;
+		background-color: $background-color_3;
+		justify-items: center;
 	}
 	.map-container {
 		display: flex;
@@ -142,5 +144,43 @@ body {
 		border-radius: 2%;
 		padding-right: 10%;
 		margin-right: 10%;
+	}
+}
+@media only screen and (max-width:2070px) {
+	.flights-container {
+		display: grid;
+		height: 35%;
+		padding-left: 5%;
+		padding-right: 5%;
+		padding-top: 2%;
+	}
+	#flight-table {
+		border-collapse: collapse;
+		width: 100%;
+		height: 100%;
+		border-radius: 0.5rem;
+		background-color: $background-color_2;
+		box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	}
+	.map-container {
+		display: flex;
+		flex-grow: 1;
+		flex-shrink: 0;
+		margin-top: 3%;
+		padding-left: 5%;
+		background-position: center;
+		background-size: contain;
+		justify-items: flex-start;
+		flex-direction: center;
+		padding-right: 15%;
+		height: 35%;
+	}
+	#map {
+		height: 300px;
+		width: 100%;
+		border-radius: 2%;
+		padding-right: 13%;
+		margin-right: 15%;
+		border-radius: 0.5rem;
 	}
 }
