--- a/src/CSS/style.scss
+++ b/src/CSS/style.scss
@@ -8,27 +8,11 @@ $background-color_3: aliceblue;
 	padding: 0;
 	margin: 0;
 }
-.header {
-	display: flex;
-	width: auto;
-	height: 40px;
-	background-color: $background-color_1;
-	margin-top: 0.5%;
-	justify-content: center;
-	padding: 20px;
-	margin-left: 1%;
-	margin-right: 3%;
-	border-radius: 0.5rem;
-	flex-shrink: 1;
-}
+
 body {
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
-	font-family: $font-family_1;
-	background-image: url('../mediaContent/Awesome\ Blue\ Background\ HD\ Wallpaper\ Free\ Download.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
 }
 .flights-container {
 	display: grid;
@@ -37,43 +21,24 @@ body {
 	padding-right: 10%;
 	padding-top: 2%;
 }
-#flight-table {
-	border-collapse: collapse;
-	width: 100%;
-	border-radius: 2px;
-	background-color: $background-color_2;
-	align-items: center;
-}
-#item-link {
-	color: $color_1;
-}
-#flight-table-row {
-	display: grid;
-	grid-template-columns: 2fr 2fr 1fr;
-	grid-template-rows: 1fr 1fr;
-	grid-column-gap: 1rem;
-	align-items: center;
-	border-bottom: 1px solid;
-	padding: 1rem;
-}
+
 .map-container {
 	display: flex;
 	flex-grow: 1;
 	flex-shrink: 0;
 	margin-top: 3%;
-	padding-left: 3%;
-	padding-right: 3%;
 	background-position: center;
 	background-size: contain;
 	justify-items: flex-end;
 	flex-direction: column-reverse;
+	padding-left: 14rem;
 }
 #map {
 	height: 150px;
 	width: 100%;
 	border-radius: 0.5rem;
 }
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:600vw) {
 	.flights-container {
 		display: grid;
 		height: 50%;
@@ -83,7 +48,6 @@ body {
 		order: 1;
 	}
 	#flight-table {
-		border-collapse: collapse;
 		width: 100%;
 		height: 50%;
 		border-radius: 2px;
@@ -94,20 +58,21 @@ body {
 		flex-grow: 1;
 		flex-shrink: 0;
 		margin-top: 3%;
-		padding-left: 10%;
+		padding-left: 14rem;
 		background-position: center;
 		background-size: contain;
 		justify-items: flex-start;
 		flex-direction: column;
 		order: 0;
-		margin-right: 17%;
+		margin-right: 14rem;
 	}
 	#map {
 		height: 200px;
 		width: 100%;
 		border-radius: 2%;
-		padding-right: 10%;
+		padding-right: 14rem;
 		margin-right: 10%;
+		padding-left: 14rem;
 	}
 }
 @media only screen and (max-width:768px) {
@@ -118,14 +83,7 @@ body {
 		padding-right: 5%;
 		padding-top: 2%;
 	}
-	#flight-table {
-		border-collapse: collapse;
-		width: 100%;
-		height: 100%;
-		border-radius: 2px;
-		background-color: $background-color_3;
-		justify-items: center;
-	}
+
 	.map-container {
 		display: flex;
 		flex-grow: 1;
@@ -136,14 +94,12 @@ body {
 		background-size: contain;
 		justify-items: flex-start;
 		flex-direction: column;
-		padding-right: 15%;
+		margin-right: 14rem;
 	}
 	#map {
 		height: 200px;
 		width: 100%;
 		border-radius: 2%;
-		padding-right: 10%;
-		margin-right: 10%;
 	}
 }
 @media only screen and (max-width:2070px) {
@@ -159,7 +115,6 @@ body {
 		width: 100%;
 		height: 100%;
 		border-radius: 0.5rem;
-		background-color: $background-color_2;
 		box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	}
 	.map-container {
@@ -167,19 +122,17 @@ body {
 		flex-grow: 1;
 		flex-shrink: 0;
 		margin-top: 3%;
-		padding-left: 5%;
 		background-position: center;
 		background-size: contain;
 		justify-items: flex-start;
 		flex-direction: center;
-		padding-right: 15%;
 		height: 35%;
+		padding-left: 14rem;
 	}
 	#map {
 		height: 300px;
 		width: 100%;
 		border-radius: 2%;
-		padding-right: 13%;
 		margin-right: 15%;
 		border-radius: 0.5rem;
 	}
