--- a/src/CSS/style.scss
+++ b/src/CSS/style.scss
@@ -1,139 +1,26 @@
-$color_1: #007FFF;
-$font-family_1: "Montserrat", sans-serif;
-$background-color_1: #007FFF;
-$background-color_2: whitesmoke;
+
 $background-color_3: aliceblue;
 
-* {
-	padding: 0;
-	margin: 0;
-}
 
-body {
-	margin: 0;
-	width: 100vw;
-	height: 100vh;
-}
 .flights-container {
 	display: grid;
-	height: 20%;
+	height: 100%;
 	padding-left: 10%;
 	padding-right: 10%;
 	padding-top: 2%;
+	order: 1;
+}
+#flight-table {
+	width: 100%;
+	height: 50%;
+	border-radius: 2px;
+	background-color: $background-color_3;
 }
 
-.map-container {
-	display: flex;
-	flex-grow: 1;
-	flex-shrink: 0;
-	margin-top: 3%;
-	background-position: center;
-	background-size: contain;
-	justify-items: flex-end;
-	flex-direction: column-reverse;
-	padding-left: 14rem;
-}
 #map {
-	height: 150px;
+	height: 20rem;
 	width: 100%;
 	border-radius: 0.5rem;
-}
-@media only screen and (max-width:600vw) {
-	.flights-container {
-		display: grid;
-		height: 50%;
-		padding-left: 10%;
-		padding-right: 10%;
-		padding-top: 2%;
-		order: 1;
-	}
-	#flight-table {
-		width: 100%;
-		height: 50%;
-		border-radius: 2px;
-		background-color: $background-color_3;
-	}
-	.map-container {
-		display: flex;
-		flex-grow: 1;
-		flex-shrink: 0;
-		margin-top: 3%;
-		padding-left: 14rem;
-		background-position: center;
-		background-size: contain;
-		justify-items: flex-start;
-		flex-direction: column;
-		order: 0;
-		margin-right: 14rem;
-	}
-	#map {
-		height: 200px;
-		width: 100%;
-		border-radius: 2%;
-		padding-right: 14rem;
-		margin-right: 10%;
-		padding-left: 14rem;
-	}
-}
-@media only screen and (max-width:768px) {
-	.flights-container {
-		display: grid;
-		height: 30%;
-		padding-left: 5%;
-		padding-right: 5%;
-		padding-top: 2%;
-	}
-
-	.map-container {
-		display: flex;
-		flex-grow: 1;
-		flex-shrink: 0;
-		margin-top: 3%;
-		padding-left: 5%;
-		background-position: center;
-		background-size: contain;
-		justify-items: flex-start;
-		flex-direction: column;
-		margin-right: 14rem;
-	}
-	#map {
-		height: 200px;
-		width: 100%;
-		border-radius: 2%;
-	}
-}
-@media only screen and (max-width:2070px) {
-	.flights-container {
-		display: grid;
-		height: 35%;
-		padding-left: 5%;
-		padding-right: 5%;
-		padding-top: 2%;
-	}
-	#flight-table {
-		border-collapse: collapse;
-		width: 100%;
-		height: 100%;
-		border-radius: 0.5rem;
-		box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-	}
-	.map-container {
-		display: flex;
-		flex-grow: 1;
-		flex-shrink: 0;
-		margin-top: 3%;
-		background-position: center;
-		background-size: contain;
-		justify-items: flex-start;
-		flex-direction: center;
-		height: 35%;
-		padding-left: 14rem;
-	}
-	#map {
-		height: 300px;
-		width: 100%;
-		border-radius: 2%;
-		margin-right: 15%;
-		border-radius: 0.5rem;
-	}
+	padding-left: 5%;
+	padding-right: 5%;
 }
